# Fastapi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/: ci-reference.yml
.github/workflows/: ci.yml  code_quality.yml
alembic/: env.py
alembic/versions/: a269b957dad1_post_table_schema.py  c9002a4d090d_add_hnsw_index_for_document_chunks.py  cec6b3ed59e8_post_table_schema.py  d3320e963123_post_images_table.py  ded05c0da8bd_create_users_table.py
app/: routes.py  schema.py
app/auth/: schema.py  services.py
app/auth/v1/: routers.py
app/blog/: models.py  routers.py  schemas.py  service.py
app/chat/: models.py  routers.py  schemas.py  service.py
app/core/: config.py  engine_mongo.py  engine_psgl.py  gql_context.py  security.py
app/core/celery/: beat.py  celery_app.py  tasks.py  worker.py
app/core/embeddings/: hf.py
app/core/exceptions/: exception_handlers.py  exception_registry.py  exceptions.py
app/core/llm/: openai.py
app/ingestion/: routers.py  services.py
app/notification/: routers.py  service.py
app/user/: models.py  schema.py  services.py
app/user/graphql/: queries.py  subscriptions.py  types.py
app/user/v1/: routers.py
tests/: conftest.py  test_user_api.py  test_user_service.py
