[project]
name = "002"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "alembic",
  "asyncpg",
  "psycopg[binary]",
  "pydantic",
  "python-jose",
  "passlib",
  "redis",
  "celery",
  "motor",
  "pymongo",
  "pgvector",
  "openai",
  "sentence-transformers",
  "transformers",
  "pypdf>=6.6.2",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "setuptools==80.10.1",
    "black>=26.1.0",
    "mypy>=1.19.1",
    "ruff>=0.14.14"
]

[tool.uv]
resolution = "highest"
